# bindings-rust

./: .gitignore  Cargo.toml  README.md  example.js  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  list.rs
