[package]
edition = "2018"
name = "serialport_bindings-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1.0.1", features = ["tokio_rt"] }
napi-derive = "1"
serialport = "4.0.0"
tokio = "1.8.4"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
