[package]
name = "bindings-rust"
version = "0.1.0"
authors = ["Francis Gulotta <wizard@roborooter.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "bindings_rust"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
serialport = "3.2.0"
